test/neg/hex00.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((a Int)(b Int)(v1 Int)) (=> (and (= a 8) (and (= b 7) (= v1 (+ a b)))) (= v1 12))))
